--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Midas Host </title>
+  <title>Midas Host - CDN</title>
   <link rel="stylesheet" href="./style.css">
 
 <link rel="shortcut icon" href="https://cdn.midashost.online/assets/images/logos/MidasLogo1.png" type="image/x-icon">
